client: fix Navbar overflow

--- a/client/src/components/Navbar/LinksNavbar/style.css
+++ b/client/src/components/Navbar/LinksNavbar/style.css
@@ -6,14 +6,6 @@
     z-index: 2;
 }
 
-.navbar__menu-desktop a {
-    color: white;
-}
-
-.navbar__menu-medium a {
-    color: white;
-}
-
 .navbar__menu-desktop {
     width: 100%;
     height: 72px;
@@ -21,6 +13,10 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    color: white;
+}
+
+.navbar__menu-desktop a {
     color: white;
 }
 
@@ -302,6 +298,10 @@
     justify-content: space-between;
 }
 
+.navbar__menu-medium a {
+    color: white;
+}
+
 .navbar__menu-medium .navbar__signup {
     height: 31px;
     font-size: 14px;
@@ -370,9 +370,19 @@
 
 .sidebar__container {
     position: fixed;
-    top: 64px;
-    right: 0;
     z-index: 2;
+    top: 65px;
+    left: 0;
+    right: 0;
+    height: calc(100svh - 65px);
+    backdrop-filter: blur(3px);
+    background: rgba(31, 35, 40, 0.5);
+}
+
+.sidebar__wrapper {
+    position: fixed;
+    top: -1px;
+    right: 0;
     width: calc(100% - 16px);
     height: calc(100svh - 88px);
     background: white;
@@ -748,7 +758,7 @@
         padding: 16px 40px;
     }
 
-    .sidebar__container {
+    .sidebar__wrapper {
         width: 320px;
         animation: popup 200ms 0s ease forwards;
     }
